--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  position: relative;
 }
 
 .App-logo {
@@ -8,7 +9,7 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .App-logo, .orangeButton {
     animation: App-logo-spin infinite 20s linear;
   }
 }
@@ -35,4 +36,34 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.orangeButton {
+  position: fixed;
+  cursor: pointer;
+  top: 50%;
+  left: 50%;
+  width: 50px;
+  height: 50px;
+  z-index: 20;
+}
+
+.orangeButton img {
+  height: 100%;
+  width: 100%;
+}
+
+.youTubeStyle {
+  position: fixed;
+  top: 0;
+  left: 0,; 
+  bottom: 0; 
+  right: 0;
+  width: 100%;
+  height: 100%; 
+  border: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  z-index: 10;
 }
