--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,16 @@
   }
 }
 
+header {
+  background-color: black;
+  color: white;
+}
+
+h1 {
+  padding: .1rem;
+  margin: 0;
+}
+
 .orangeButton {
   position: fixed;
   cursor: pointer;
@@ -48,6 +58,7 @@
   z-index: 20;
 }
 
+.overlayContent img,
 .orangeButton img {
   height: 100%;
   width: 100%;
@@ -55,7 +66,7 @@
 
 .youTubeStyle {
   position: fixed;
-  top: 0;
+  top: 41px;
   left: 0,; 
   bottom: 0; 
   right: 0;
@@ -66,4 +77,40 @@
   padding: 0;
   overflow: hidden;
   z-index: 10;
+}
+
+.overlayContainer {
+  position: fixed;
+  top: 0;
+  left: 0,; 
+  bottom: 0; 
+  right: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  z-index: 30;
+  background-color: rgba(0,0,0,0.5);
+}
+
+.overlayContent {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  background-color: white;
+  border-radius: 1rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.overlayImageContainer {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 }
